# forge

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  build-run-examples.ps1  build-run-examples.sh
.github/workflows/: build-capi.yml  build-test-backend-loading-linux.yml  build-test-backend-loading-windows.yml  build-test-core-linux.yml  build-test-core-windows.yml  build-test-tools-linux.yml  build-test-tools-windows.yml  ci-capi.yml  codeql-analysis.yml  coverage.yml  test-downstream-qlrisks.yml  test-downstream-xad-benchmarks.yml  test-downstream.yml
api/c/: CMakeLists.txt  forge_c_api.cpp  forge_c_api.h  test_capi.c
api/native/: CMakeLists.txt  README.md  fbool.cpp  fbool.hpp  fdouble.cpp  fint.cpp
backends/: README.md
backends/double/avx2/: avx2_backend.cpp  avx2_backend_registration.cpp  avx2_instruction_set.cpp  avx2_instruction_set.hpp  avx2_node_value_buffer.hpp  avx2_static_registration.cpp  ymm_register_allocator.hpp
docs/: benchmarks.md
examples/: CMakeLists.txt  README.md  autodiff_example.cpp  basic_example.cpp  basic_gradient.cpp  graph_from_json.cpp  json_loading_example.cpp  multi_variable.cpp  ops10_function_graph.json  performance_demo.cpp
scripts/: analyze-coverage-gap.ps1  code-coverage-combined.ps1  code-coverage-src.ps1
src/compiler/: backward_forging.cpp  backward_forging.hpp  compiler_config.hpp  forge_engine.cpp  forge_engine.hpp  forward_forging.cpp  forward_forging.hpp  forward_stitcher.cpp  forward_stitcher.hpp  gradient_stitcher.cpp  gradient_stitcher.hpp  instruction_set.hpp  instruction_set_factory.hpp  instruction_tracer.hpp  register_allocator.cpp  register_allocator.hpp  register_allocator_base.hpp  runtime_trace.cpp  runtime_trace.hpp  xmm_register_allocator.hpp  ymm_register_allocator.hpp
src/compiler/instruction_sets/: avx2_instruction_set.cpp  avx2_instruction_set.hpp  avx2_transcendental_helpers.hpp  sse2_scalar_instruction_set.hpp  x86_instruction_set_base.cpp  x86_instruction_set_base.hpp
src/compiler/interfaces/: compilation_policy.hpp  instruction_set.hpp  node_value_buffer.hpp  register_allocator.hpp
src/compiler/node_value_buffers/: avx2_node_value_buffer.hpp  node_value_buffer.hpp  node_value_buffer_factory.cpp  scalar_node_value_buffer.hpp
src/compiler/x86/common/: compiler_config.hpp  instruction_set_factory.hpp  instruction_tracer.hpp  node_value_buffer_factory.cpp  register_allocator.hpp  register_allocator_base.hpp  x86_instruction_set_base.hpp
src/forge/: forge.h
src/forge/compiler/: forge_engine.cpp  forge_engine.h  forward_compiler.cpp  forward_compiler.h  reverse_gradient_compiler.cpp  reverse_gradient_compiler.h
src/forge/compiler/analysis/: stability_cleaner.cpp  stability_cleaner.h
src/forge/compiler/generators/: constant_pool_manager.cpp  constant_pool_manager.h  (+4 more)
src/forge/core/: computation_graph.cpp  computation_graph.h  opcodes.h
src/forge/runtime/: avx2_buffer.h  compiled_kernel.h  kernel_requirements.h  node_buffer.h  node_buffer_factory.cpp  runtime.h  scalar_buffer.h
src/forge/x86/: avx2_instruction_set.cpp  avx2_instruction_set.h  avx2_transcendental_helpers.h  compiler_config.h  instruction_set.h  instruction_tracer.h  register_allocator.h  runtime_trace.cpp  runtime_trace.h  sse2_scalar_instruction_set.h  x86_instruction_set_base.cpp  x86_instruction_set_base.h  xmm_register_allocator.h  ymm_register_allocator.h
src/graph/: README.md  graph.cpp  graph.hpp  graph_debug.hpp  graph_optimizer.cpp  graph_optimizer.hpp  graph_recorder.cpp  graph_recorder.hpp  handles.hpp
src/graph/optimizations/: README.md  algebraic_simplification.cpp  algebraic_simplification.hpp  common_subexpression_elimination.cpp  common_subexpression_elimination.hpp  constant_cleanup.cpp  constant_cleanup.hpp  inactive_folding.cpp  inactive_folding.hpp  optimizations.hpp  placeholder_optimization.cpp  placeholder_optimization.hpp  stability_cleaning.cpp  stability_cleaning.hpp
tests/: CMakeLists.txt  test_all_operations_coverage.cpp  test_backend_loading.cpp  test_benchmarks.cpp  test_benchmarks_avx2.cpp  test_compiler_config_unit.cpp  test_debug_helpers.cpp  test_derivatives_gtest.cpp  test_derivatives_gtest_avx2.cpp  test_forge_engine_unit.cpp  test_functions_1d.hpp  test_functions_2d.hpp  test_functions_multi_io.hpp  test_graph_base.hpp  test_graph_optimizer_unit.cpp  test_graph_unit.cpp  test_graphs.hpp  test_runtime_trace.cpp  test_runtime_tracer.cpp
tests/American/: test_american_option.hpp
tools/: README.md  graph_serialization_service.cpp  graph_serialization_service.h
tools/benchmarkTool/: benchmark_diff_runner.hpp  benchmark_multi_dim_diff_runner.hpp  benchmark_runner.hpp
tools/capi/: CMakeLists.txt  ForgeCAPIConfig.cmake.in  README.md  forge_c_api.cpp  forge_c_api.h  test_capi.c
tools/corruptionDetection/: ideas.md
tools/graphSerialization/: graph_serialization.cpp  graph_serialization.hpp
tools/packaging/: .gitignore  CMakeLists.txt  ForgeConfig.cmake.in  README.md  build-forge.cmd
tools/sanityTool/: sanity_checker.hpp  sanity_checker_diff.hpp  sanity_multi_dim_checker.hpp  sanity_multi_dim_checker_diff.hpp
tools/tape_interpreter/: README.md  tape_interpreter.hpp
tools/testFunctions/: README.md  select_helper.hpp
tools/testFunctions/multiToMulti/: all.hpp  linear_transforms.hpp  nonlinear_transforms.hpp
tools/testFunctions/oneToOne/: all.hpp  american.hpp  bigGraph.hpp  comparisons.hpp  comparisons_specialized.hpp  complex.hpp  diagnostic_medium.hpp  exponential.hpp  polynomials.hpp  rational.hpp  special.hpp  trigonometric.hpp
tools/types/: README.md  fdouble.cpp  fdouble.hpp  fint.hpp
toolsTests/: CMakeLists.txt  build-and-run-optimization-benchmark.ps1  run-optimization-benchmark.ps1  test_benchmark_diff_tool.cpp  test_benchmark_multi_dim_diff_tool.cpp  test_benchmark_tool.cpp  test_bridge_workflow_benchmark.cpp  test_graph_serialization.cpp  test_optimization_benchmark.cpp  test_parallel_thread_safety.cpp  test_sanity_diff_tool.cpp  test_sanity_multi_dim_diff_tool.cpp  test_sanity_multi_dim_tool.cpp  test_sanity_tool.cpp  test_sanity_tool_avx2.cpp
(+20 files in other folders)
